--- a/test/Userpage.xaml
+++ b/test/Userpage.xaml
@@ -12,12 +12,13 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="30"/>
             <ColumnDefinition Width="100"/>
-            <ColumnDefinition Width="320"/>
-            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="160"/>
+            <ColumnDefinition Width="160"/>
+            <ColumnDefinition Width="*"/>
             
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="60"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
@@ -28,25 +29,31 @@
         </Grid.RowDefinitions>
         
         <StackPanel Background="DarkRed" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Grid.RowSpan="8"/>
-        <Label Content="회원정보 수정" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" Background="Yellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25" FontFamily="Gungsuh" />
+        <Label Content="회원정보 수정" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Background="Yellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25" FontFamily="Gungsuh" />
         <Button Grid.Column="3" Grid.Row="0" Width="40" Height="40" Margin="20,0,0,30" Click="Close_Click"/>
 
 
 
 
-        <Label Content="회원 정보 재입력" Grid.Column="2" Grid.Row="1" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="40" FontFamily="Gungsuh" />
+        <Label Content="기존 회원 정보" Grid.Column="2" Grid.Row="1" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontFamily="Gungsuh" />
          <Label Content="ID:" Grid.Column="1" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh" />
         <TextBox x:Name="ID" Grid.Column="2" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
         <Label Content="PW:" Grid.Column="1" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh"/>
         <TextBox x:Name="PW" Grid.Column="2" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <Label Content="이름:" Grid.Column="1" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="N" Grid.Column="2" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <Label Content="나이:" Grid.Column="1" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh"/>
+        <TextBox x:Name="A" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
 
-        <Label Content="변경 회원 정보" Grid.Column="2" Grid.Row="4" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="40" FontFamily="Gungsuh" />
-        <Label Content="이름:" Grid.Column="1" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="NN" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <Label Content="나이:" Grid.Column="1" Grid.Row="6" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh"/>
-        <TextBox x:Name="NA" Grid.Column="2" Grid.Row="6" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <Label Content="변경 회원 정보" Grid.Column="3" Grid.Row="1" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontFamily="Gungsuh" />
+        <TextBox x:Name="NID" Grid.Column="3" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="NPW" Grid.Column="3" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="NN" Grid.Column="3" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="NA" Grid.Column="3" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
 
-        <Button Content="정보 수정 요청" Grid.Column="2" Grid.Row="7" Background="Red" FontSize="40" FontFamily="Gungsuh" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="Edit_Click" Margin="10" BorderThickness="5" BorderBrush="Crimson">
+        <Button Content="정보 수정 요청" Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Background="Red" FontSize="40" FontFamily="Gungsuh" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="Edit_Click" Margin="10" BorderThickness="5" BorderBrush="Crimson">
+            
+            
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="30"/>
