--- a/test/Userpage.xaml
+++ b/test/Userpage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:test"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="550"
-      Title="Userpage" Height="450" Width="550">
+      Title="Userpage" Height="450" Width="550" WindowHeight="450" WindowWidth="550"  >
 
     <Grid ShowGridLines="False">
         <Grid.ColumnDefinitions>
@@ -30,7 +30,7 @@
         
         <StackPanel Background="DarkRed" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Grid.RowSpan="8"/>
         <Label Content="회원정보 수정" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Background="Yellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25" FontFamily="Gungsuh" />
-        <Button Grid.Column="3" Grid.Row="0" Width="40" Height="40" Margin="20,0,0,30" Click="Close_Click"/>
+        <Button Grid.Column="4" Grid.Row="0" Width="20" Height="20" HorizontalAlignment="right" Margin="10" Click="Close_Click"/>
 
 
 
@@ -46,10 +46,10 @@
         <TextBox x:Name="A" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
 
         <Label Content="변경 회원 정보" Grid.Column="3" Grid.Row="1" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontFamily="Gungsuh" />
-        <TextBox x:Name="NID" Grid.Column="3" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="NPW" Grid.Column="3" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="NN" Grid.Column="3" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="NA" Grid.Column="3" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="NID" KeyDown="NID_KeyDown" Grid.Column="3" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="NPW" KeyDown="NPW_KeyDown" PreviewKeyDown="NPW_PreviewKeyDown" PreviewTextInput="NPW_PreviewTextInput" Grid.Column="3" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="NN" KeyDown="NN_KeyDown" PreviewTextInput="NN_PreviewTextInput" Grid.Column="3" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="NA" KeyDown="NA_KeyDown" PreviewKeyDown="NA_PreviewKeyDown" PreviewTextInput="NA_PreviewTextInput" Grid.Column="3" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
 
         <Button Content="정보 수정 요청" Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Background="Red" FontSize="40" FontFamily="Gungsuh" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="Edit_Click" Margin="10" BorderThickness="5" BorderBrush="Crimson">
             
