--- a/test/MainWindow.xaml
+++ b/test/MainWindow.xaml
@@ -10,10 +10,12 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="391"/>
-            <ColumnDefinition Width="9"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="50"/>
+            
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -26,27 +28,27 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Button Name ="Close" Grid.Column="3" Grid.Row="0" HorizontalAlignment="Right" Margin="0" Click= "Close_Click"
+        <Button Name ="Close" Grid.Column="4" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center" Click= "Close_Click" Margin="0,15,15,0"
                     Background="Black" BorderBrush="Transparent">
             <Image Source="/Resources/btn_X_close.png" Stretch="None">
             </Image>
         </Button>
-        <TextBox x:Name="IDtxt" KeyDown="IDtxt_KeyDown" PreviewKeyDown="IDtxt_PreviewKeyDown" Grid.Row="2" Grid.Column="1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="20" FontFamily="맑은고딕" Height="50" Grid.RowSpan="2"/>
-        <PasswordBox x:Name="PWtxt" KeyDown="PWtxt_KeyDown" PreviewKeyDown="PWtxt_PreviewKeyDown" PreviewTextInput="PWtxt_PreviewTextInput" Grid.Row="5" Grid.Column="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="20" FontFamily="맑은고딕" >
+        <TextBox x:Name="IDtxt" KeyDown="IDtxt_KeyDown" Grid.Row="2" Grid.Column="2" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="20" FontFamily="맑은고딕" Height="50" Grid.RowSpan="2" MaxLength="15"/>
+        <PasswordBox x:Name="PWtxt" KeyDown="PWtxt_KeyDown" Grid.Row="5" Grid.Column="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="20" FontFamily="맑은고딕" MaxLength="20">
 
         </PasswordBox>
         
-        <Button x:Name ="login"  Grid.Column="1" Grid.Row="7"  Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" Click="Button_Click">
+        <Button x:Name ="login"  Grid.Column="2" Grid.Row="7"  Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" Click="Button_Click">
             <Image Source="/Resources/btn_login.png" Stretch="None"/>
         </Button>
-        <Button Grid.Column="1" Grid.Row="6"  Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" Click="Button3_Click">
+        <Button Grid.Column="2" Grid.Row="6"  Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Center" Click="Button3_Click">
             <Image Source="/Resources/회원가입.png" Stretch="None"/>
         </Button>
-        <Label Content="Log - In" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="70" FontFamily="Gungsuh" Foreground="Red" >
+        <Label Content="Log - In" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="70" FontFamily="Gungsuh" Foreground="Red" >
             
         </Label>
-        <Label Content ="ID" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
-        <Label Content ="PassWord" Grid.Column="0" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
+        <Label Content ="ID" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
+        <Label Content ="PassWord" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
 
 
     </Grid>
