--- a/test/Resignpage.xaml
+++ b/test/Resignpage.xaml
@@ -10,35 +10,36 @@
 
     <Grid ShowGridLines="False">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="30"/>
-            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="320"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0.8*"/>
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="0.8*"/>
+            <RowDefinition Height="0.3*"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="90"/>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <StackPanel Background="DarkRed" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Grid.RowSpan="8"/>
         <Label Content="계정      탈퇴" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" Background="Yellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25" FontFamily="Gungsuh" />
-        <Button Grid.Column="3" Grid.Row="0" Width="20" Height="20" Margin="55.0,0,0,0" Click="Close_Click" >
+        <Button Grid.Column="3" Grid.Row="0" Width="20" Height="20" Margin="15" Click="Close_Click" />
+        <Button Grid.Column="0" Grid.Row="0" Width="20" Height="20" Margin="15" Click="Back_Click" Background="Gray"/>
 
-        </Button>
-        <Label Content="회원 정보 확인" Grid.Column="2" Grid.Row="2" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="40" FontFamily="Gungsuh" />
-        <Label Content="ID:" Grid.Column="1" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="ID" KeyDown="ID_KeyDown" Grid.Column="2" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <Label Content="PW:" Grid.Column="1" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh"/>
-        <TextBox x:Name="PW" KeyDown="PW_KeyDown" PreviewKeyDown="PW_PreviewKeyDown" PreviewTextInput="PW_PreviewTextInput" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        
+        <Label Content="회원 정보 확인" Grid.Column="2" Grid.Row="2" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25" FontFamily="Gungsuh" />
+        <Label Content="ID:" Grid.Column="1" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh" />
+        <TextBox x:Name="ID" KeyDown="ID_KeyDown" PreviewKeyDown="ID_PreviewKeyDown" Grid.Column="2" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" MaxLength="15" IsEnabled="False"/>
+        <Label Content="PW:" Grid.Column="1" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh" />
+        <TextBox x:Name="PW" KeyDown="PW_KeyDown" PreviewKeyDown="PW_PreviewKeyDown" PreviewTextInput="PW_PreviewTextInput" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" MaxLength="20"/>
 
 
-        <Button Content="탈   퇴" Grid.Column="2" Grid.Row="7" Background="Red" FontSize="40" FontFamily="Gungsuh" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="Resign_Click" Margin="10" BorderThickness="5" BorderBrush="Crimson">
+        <Button Content="탈   퇴" Grid.Column="2" Grid.Row="6" Background="Red" FontSize="30" FontFamily="Gungsuh" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="Resign_Click" Margin="10" BorderThickness="5" BorderBrush="Crimson">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="30"/>
