--- a/test/Userpage.xaml
+++ b/test/Userpage.xaml
@@ -6,59 +6,59 @@
       xmlns:local="clr-namespace:test"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="550"
-      Title="Userpage" Height="450" Width="550" WindowHeight="450" WindowWidth="550"  >
+      Title="Userpage" Height="450" Width="550" >
 
     <Grid ShowGridLines="False">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="30"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="100"/>
-            <ColumnDefinition Width="160"/>
-            <ColumnDefinition Width="160"/>
+            <ColumnDefinition Width="130"/>
+            <ColumnDefinition Width="130"/>
             <ColumnDefinition Width="*"/>
             
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="40"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="90"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
         <StackPanel Background="DarkRed" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Grid.RowSpan="8"/>
         <Label Content="회원정보 수정" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Background="Yellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25" FontFamily="Gungsuh" />
-        <Button Grid.Column="4" Grid.Row="0" Width="20" Height="20" HorizontalAlignment="right" Margin="10" Click="Close_Click"/>
+        <Button Grid.Column="4" Grid.Row="0" Width="20" Height="20" HorizontalAlignment="right" Margin="20" Click="Close_Click"/>
 
 
 
 
         <Label Content="기존 회원 정보" Grid.Column="2" Grid.Row="1" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontFamily="Gungsuh" />
-         <Label Content="ID:" Grid.Column="1" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="ID" Grid.Column="2" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <Label Content="PW:" Grid.Column="1" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh"/>
-        <TextBox x:Name="PW" Grid.Column="2" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <Label Content="이름:" Grid.Column="1" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="N" Grid.Column="2" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <Label Content="나이:" Grid.Column="1" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Width="100" Height="60" FontSize="25" FontFamily="Gungsuh"/>
-        <TextBox x:Name="A" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+         <Label Content="ID:" Grid.Column="1" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh" />
+        <TextBox x:Name="ID" Grid.Column="2" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" />
+        <Label Content="PW:" Grid.Column="1" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh"/>
+        <TextBox x:Name="PW" Grid.Column="2" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" />
+        <Label Content="이름:" Grid.Column="1" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh" />
+        <TextBox x:Name="N" Grid.Column="2" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" />
+        <Label Content="나이:" Grid.Column="1" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh"/>
+        <TextBox x:Name="A" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" />
 
         <Label Content="변경 회원 정보" Grid.Column="3" Grid.Row="1" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontFamily="Gungsuh" />
-        <TextBox x:Name="NID" KeyDown="NID_KeyDown" Grid.Column="3" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="NPW" KeyDown="NPW_KeyDown" PreviewKeyDown="NPW_PreviewKeyDown" PreviewTextInput="NPW_PreviewTextInput" Grid.Column="3" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="NN" KeyDown="NN_KeyDown" PreviewTextInput="NN_PreviewTextInput" Grid.Column="3" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
-        <TextBox x:Name="NA" KeyDown="NA_KeyDown" PreviewKeyDown="NA_PreviewKeyDown" PreviewTextInput="NA_PreviewTextInput" Grid.Column="3" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="25" FontFamily="Gungsuh" />
+        <TextBox x:Name="NID" KeyDown="NID_KeyDown" Grid.Column="3" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" MaxLength="15"/>
+        <TextBox x:Name="NPW" KeyDown="NPW_KeyDown" PreviewKeyDown="NPW_PreviewKeyDown" PreviewTextInput="NPW_PreviewTextInput" Grid.Column="3" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" MaxLength="20"/>
+        <TextBox x:Name="NN" KeyDown="NN_KeyDown" PreviewKeyDown="NN_PreviewKeyDown" PreviewTextInput="NN_PreviewTextInput" Grid.Column="3" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh"  MaxLength="10"/>
+        <TextBox x:Name="NA" KeyDown="NA_KeyDown" PreviewKeyDown="NA_PreviewKeyDown" PreviewTextInput="NA_PreviewTextInput" Grid.Column="3" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" MaxLength="4" />
 
-        <Button Content="정보 수정 요청" Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Background="Red" FontSize="40" FontFamily="Gungsuh" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="Edit_Click" Margin="10" BorderThickness="5" BorderBrush="Crimson">
-            
-            
-            <Button.Resources>
+        <Button Content="정보 수정 요청" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" Background="Red" FontSize="30" FontFamily="Gungsuh" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="Edit_Click" Margin="10" BorderThickness="5" BorderBrush="Crimson">
+          <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="30"/>
                 </Style>
             </Button.Resources>
         </Button>
+
+        <Button Grid.Column="0" Grid.Row="0" Background="Gray" Click="Button_Click" Width="20" Height="20" VerticalAlignment="Center" Margin="0,0,50,0"/>
     </Grid>
 </Page>
